--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ on:
     types: [published]
 
 jobs:
-  smoke-test:
+  smoke-tests:
     if: | 
       github.event_name == 'push'
       || github.event_name == 'release'
@@ -57,14 +57,9 @@ jobs:
       || github.event_name == 'release'
       || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name != github.repository)
 
-    outputs:
-      GIT_TAG: ${{ steps.variables.outputs.GIT_TAG }}
-      GIT_BRANCH: ${{ steps.variables.outputs.GIT_BRANCH }}
-      OUTPUT_DIR: ${{ steps.variables.outputs.OUTPUT_DIR }}
-
     runs-on: ubuntu-latest
     
-    needs: smoke-test
+    needs: smoke-tests
 
     container: ghcr.io/pi-hole/ftl-build:v1.16-${{ matrix.arch }}
 
@@ -100,20 +95,10 @@ jobs:
         name: Checkout code
         uses: actions/checkout@v3
       -
-        name: "Calculate required build variables"
-        id: variables
-        run: |
-          GIT_TAG=${{ github.event.release.tag_name }}
-          # If GIT_TAG is set then GIT BRANCH should be "master", else set it from GITHUB_REF
-          GIT_BRANCH=$([ -n "${GIT_TAG}" ] && echo "master" || echo "${GITHUB_REF#refs/*/}")
-          echo ::set-output name=GIT_BRANCH::${GIT_BRANCH}
-          echo ::set-output name=GIT_TAG::${GIT_TAG}
-          echo ::set-output name=OUTPUT_DIR::${GIT_TAG:-${GIT_BRANCH}}
-      -
         name: "Build"
         env:
-          GIT_BRANCH: ${{ steps.variables.outputs.GIT_BRANCH }}
-          GIT_TAG: ${{ steps.variables.outputs.GIT_TAG }}
+          GIT_BRANCH: ${{ needs.smoke-tests.outputs.GIT_BRANCH }}
+          GIT_TAG: ${{ needs.smoke-tests.outputs.GIT_TAG }}
         run: |
           bash build.sh "-DSTATIC=${STATIC}"
       -
@@ -140,7 +125,7 @@ jobs:
 
   deploy:
     if: github.event_name != 'pull_request'
-    needs: build
+    needs: [smoke-tests, build]
     runs-on: ubuntu-latest
     steps:
       -
@@ -168,7 +153,7 @@ jobs:
         env:
           USER: ${{ secrets.SSH_USER }}
           HOST: ${{ secrets.SSH_HOST }}
-          TARGET_DIR: ${{ needs.build.outputs.OUTPUT_DIR }}
+          TARGET_DIR: ${{ needs.smoke-tests.outputs.OUTPUT_DIR }}
           SOURCE_DIR: ${{ steps.download.outputs.download-path }}
           
         run: |
